--- a/style.css
+++ b/style.css
@@ -1,1 +1,48 @@
 
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 10px;
+}
+.logo{
+    max-width: 5%;
+}
+.logo img{
+    height: 50px;
+}
+.navbar{
+    text-align: left;
+}
+.navbar ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.navbar li{
+    display: inline-block;
+    margin-right: 20px;;
+}.navbar button{
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 45px;
+    cursor: pointer;
+}
+.navbar a{
+    text-decoration: none;
+    color: black;
+}
+.navbar a:hover{
+    color: black;
+}
+
