--- a/style.css
+++ b/style.css
@@ -45,4 +45,71 @@ header{
 .navbar a:hover{
     color: black;
 }
+.slider {
+    display: flex;
+    align-items: center; /* Vertically center content */
+    width: 800px; /* Adjust width as needed */
+    margin: 20px auto; 
+    border: 1px solid #ccc;
+    padding: 20px;
+  }
+  .text-content {
+    flex: 1; /* Allow text content to take up available space */
+    margin-right: 20px;
+  }
+  .text-content h2 {
+    margin-bottom: 10px;
+  }
+  .circular-image {
+    width: 200px; /* Adjust size as needed */
+    height: 200px;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+  .circular-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .order-button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 10px;
+    cursor: pointer;
+  }
+  .slider-container{
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+
+  }
+  .slider{
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+  }
+  .slide{
+    min-width: 100%;
+    flex-shrink: 0;
+  }
+  .slide img{
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+  .slider-container:hover .slider{
+    transform: translate(-100%);
+  }
+
+
+
+
+
+
+
 
